[package]
name = "reth_hl"
version = "0.1.0"
edition = "2021"

[lib]
name = "reth_hl"
path = "src/lib.rs"

[[bin]]
name = "reth-hl"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "symbols"
panic = "unwind"
codegen-units = 16

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[dependencies]
reth = { git = "https://github.com/sprites0/reth", rev = "eef450bf795d4b33d67fa6e4b7cc351f9c87bfdc" }
reth-cli = { git = "https://github.com/sprites0/reth", rev = "eef450bf795d4b33d67fa6e4b7cc351f9c87bfdc" }
reth-cli-commands = { git = "https://github.com/sprites0/reth", rev = "eef450bf795d4b33d67fa6e4b7cc351f9c87bfdc" }
reth-basic-payload-builder = { git = "https://github.com/sprites0/reth", rev = "eef450bf795d4b33d67fa6e4b7cc351f9c87bfdc" }
reth-db = { git = "https://github.com/sprites0/reth", rev = "eef450bf795d4b33d67fa6e4b7cc351f9c87bfdc" }
reth-db-api = { git = "https://github.com/sprites0/reth", rev = "eef450bf795d4b33d67fa6e4b7cc351f9c87bfdc" }
reth-chainspec = { git = "https://github.com/sprites0/reth", rev = "eef450bf795d4b33d67fa6e4b7cc351f9c87bfdc" }
reth-cli-util = { git = "https://github.com/sprites0/reth", rev = "eef450bf795d4b33d67fa6e4b7cc351f9c87bfdc" }
reth-discv4 = { git = "https://github.com/sprites0/reth", rev = "eef450bf795d4b33d67fa6e4b7cc351f9c87bfdc" }
reth-engine-primitives = { git = "https://github.com/sprites0/reth", rev = "eef450bf795d4b33d67fa6e4b7cc351f9c87bfdc" }
reth-ethereum-forks = { git = "https://github.com/sprites0/reth", rev = "eef450bf795d4b33d67fa6e4b7cc351f9c87bfdc" }
reth-ethereum-payload-builder = { git = "https://github.com/sprites0/reth", rev = "eef450bf795d4b33d67fa6e4b7cc351f9c87bfdc" }
reth-ethereum-primitives = { git = "https://github.com/sprites0/reth", rev = "eef450bf795d4b33d67fa6e4b7cc351f9c87bfdc" }
reth-eth-wire = { git = "https://github.com/sprites0/reth", rev = "eef450bf795d4b33d67fa6e4b7cc351f9c87bfdc" }
reth-eth-wire-types = { git = "https://github.com/sprites0/reth", rev = "eef450bf795d4b33d67fa6e4b7cc351f9c87bfdc" }
reth-evm = { git = "https://github.com/sprites0/reth", rev = "eef450bf795d4b33d67fa6e4b7cc351f9c87bfdc" }
reth-evm-ethereum = { git = "https://github.com/sprites0/reth", rev = "eef450bf795d4b33d67fa6e4b7cc351f9c87bfdc" }
reth-node-core = { git = "https://github.com/sprites0/reth", rev = "eef450bf795d4b33d67fa6e4b7cc351f9c87bfdc" }
reth-revm = { git = "https://github.com/sprites0/reth", rev = "eef450bf795d4b33d67fa6e4b7cc351f9c87bfdc" }
reth-network = { git = "https://github.com/sprites0/reth", rev = "eef450bf795d4b33d67fa6e4b7cc351f9c87bfdc" }
reth-network-p2p = { git = "https://github.com/sprites0/reth", rev = "eef450bf795d4b33d67fa6e4b7cc351f9c87bfdc" }
reth-network-api = { git = "https://github.com/sprites0/reth", rev = "eef450bf795d4b33d67fa6e4b7cc351f9c87bfdc" }
reth-node-ethereum = { git = "https://github.com/sprites0/reth", rev = "eef450bf795d4b33d67fa6e4b7cc351f9c87bfdc" }
reth-network-peers = { git = "https://github.com/sprites0/reth", rev = "eef450bf795d4b33d67fa6e4b7cc351f9c87bfdc" }
reth-payload-primitives = { git = "https://github.com/sprites0/reth", rev = "eef450bf795d4b33d67fa6e4b7cc351f9c87bfdc" }
reth-primitives = { git = "https://github.com/sprites0/reth", rev = "eef450bf795d4b33d67fa6e4b7cc351f9c87bfdc" }
reth-primitives-traits = { git = "https://github.com/sprites0/reth", rev = "eef450bf795d4b33d67fa6e4b7cc351f9c87bfdc" }
reth-provider = { git = "https://github.com/sprites0/reth", rev = "eef450bf795d4b33d67fa6e4b7cc351f9c87bfdc", features = ["test-utils"] }
reth-rpc = { git = "https://github.com/sprites0/reth", rev = "eef450bf795d4b33d67fa6e4b7cc351f9c87bfdc" }
reth-rpc-eth-api = { git = "https://github.com/sprites0/reth", rev = "eef450bf795d4b33d67fa6e4b7cc351f9c87bfdc" }
reth-rpc-engine-api = { git = "https://github.com/sprites0/reth", rev = "eef450bf795d4b33d67fa6e4b7cc351f9c87bfdc" }
reth-tracing = { git = "https://github.com/sprites0/reth", rev = "eef450bf795d4b33d67fa6e4b7cc351f9c87bfdc" }
reth-trie-common = { git = "https://github.com/sprites0/reth", rev = "eef450bf795d4b33d67fa6e4b7cc351f9c87bfdc" }
reth-trie-db = { git = "https://github.com/sprites0/reth", rev = "eef450bf795d4b33d67fa6e4b7cc351f9c87bfdc" }
reth-codecs = { git = "https://github.com/sprites0/reth", rev = "eef450bf795d4b33d67fa6e4b7cc351f9c87bfdc" }
reth-transaction-pool = { git = "https://github.com/sprites0/reth", rev = "eef450bf795d4b33d67fa6e4b7cc351f9c87bfdc" }
reth-stages-types = { git = "https://github.com/sprites0/reth", rev = "eef450bf795d4b33d67fa6e4b7cc351f9c87bfdc" }
revm = { version = "28.0.1", default-features = false }

# alloy dependencies
alloy-genesis = { version = "1.0.23", default-features = false }
alloy-consensus = { version = "1.0.23", default-features = false }
alloy-chains = { version = "0.2.5", default-features = false }
alloy-eips = { version = "1.0.23", default-features = false }
alloy-evm = { version = "0.18.2", default-features = false }
alloy-json-abi = { version = "1.3.1", default-features = false }
alloy-json-rpc = { version = "1.0.23", default-features = false }
alloy-dyn-abi = "1.3.1"
alloy-network = { version = "1.0.23", default-features = false }
alloy-primitives = { version = "1.3.1", default-features = false, features = ["map-foldhash"] }
alloy-rlp = { version = "0.3.10", default-features = false, features = ["core-net"] }
alloy-rpc-types = { version = "1.0.23", features = ["eth"], default-features = false }
alloy-rpc-types-eth = { version = "1.0.23", default-features = false }
alloy-rpc-types-engine = { version = "1.0.23", default-features = false }
alloy-signer = { version = "1.0.23", default-features = false }
alloy-sol-macro = "1.3.1"
alloy-sol-types = { version = "1.3.1", default-features = false }

jsonrpsee = "0.25.1"
jsonrpsee-core = "0.25.1"
jsonrpsee-types = "0.25.1"

# misc dependencies
auto_impl = "1"
async-trait = "0.1.68"
bytes = { version = "1.5", default-features = false }
clap = { version = "4", features = ["derive"] }
cfg-if = { version = "1.0", default-features = false }
derive_more = { version = "2", default-features = false, features = ["full"] }
eyre = "0.6"
futures = "0.3"
lazy_static = "1.4.0"
once_cell = { version = "1.19", default-features = false, features = ["critical-section"] }
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
thiserror = { version = "2.0.0", default-features = false }
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = "0.1.11"
tracing = { version = "0.1.0", default-features = false }
rmp-serde = "1.3"
lz4_flex = "0.11"
ureq = "3.0.12"
aws-sdk-s3 = "1.93.0"
aws-config = "1.8.0"
rayon = "1.7"
time = "0.3.41"
rangemap = "=1.6.0"


[target.'cfg(unix)'.dependencies]
tikv-jemalloc-ctl = "0.6"
tikv-jemallocator = { version = "0.6", optional = true }
libc = "0.2"

[features]
default = ["jemalloc"]
jemalloc = ["dep:tikv-jemallocator"]
asm-keccak = [
    "reth-node-core/asm-keccak",
    "reth-primitives/asm-keccak",
]
min-debug-logs = [
    "tracing/release_max_level_debug",
]
dev = [
    "reth-cli-commands/arbitrary",
    "reth/dev",
    "revm/dev",
]

serde = [
    "alloy-chains/serde",
    "alloy-consensus/serde",
    "alloy-eips/serde",
    "alloy-primitives/serde",
    "alloy-rpc-types-engine/serde",
    "alloy-rpc-types-eth/serde",
    "bytes/serde",
    "parking_lot/serde",
    "reth-eth-wire/serde",
    "reth-eth-wire-types/serde",
    "reth-ethereum-forks/serde",
    "reth-ethereum-primitives/serde",
    "reth-network/serde",
    "reth-network-api/serde",
    "reth-primitives-traits/serde",
    "reth-revm/serde",
    "reth-trie-common/serde",
    "reth-trie-db/serde",
    "revm/serde",
]

client = [
    "jsonrpsee/client",
    "jsonrpsee/async-client",
    "reth-rpc-eth-api/client",
]

[dev-dependencies]
tempfile = "3.20.0"
